...
    let pullTabToDismissView: UIView = {

        let view = UIView()
        view.translatesAutoresizingMaskIntoConstraints = false
        view.backgroundColor = .systemGray
        view.layer.cornerRadius = 2.5
        view.accessibilityIdentifier = "PULL_DOWN_TAB"

        return view
    }()
    
    // MARK: Scroll View

...

    lazy var predictedDocksAtDestinationLabel: UILabel = {

        let label = NBLabel()
        label.applyProtocolUIAppearance()
        label.font = Constants.labelFont
        label.accessibilityIdentifier = "DESTINATION_BIKES"
        label.textAlignment = .center
        label.font = UIFont.preferredFont(forTextStyle: .body)
        label.text = "..."

        return label
    }()
...
